syntax = "proto3";

package user.v1;

option go_package = "github.com/eliofery/golang-fullstack/pkg/api/user/v1";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/wrappers.proto";

message GetResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
            title: "GetByIdResponse"
            description: "Response to get user by ID."
            required: ["number", "email", "password"]
        }
        external_docs: {
            url: "https://github.com/eliofery/golang-fullstack";
            description: "Документация по GetByIdResponse";
        }
        example: '{"number": "538","email": "test@mail.org","password": "123456"}'
    };

    google.protobuf.StringValue result = 1;
}
