syntax = "proto3";

package user.v2;

option go_package = "github.com/eliofery/golang-fullstack/pkg/api/user/v2";

import "protoc-gen-openapiv2/options/annotations.proto";
import "buf/validate/validate.proto";

message GetRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
            title: "GetByIdRequest"
            description: "Request to get user by ID."
            required: ["number", "email", "password"]
        }
        external_docs: {
            url: "https://github.com/eliofery/golang-fullstack";
            description: "Документация по GetByIdRequest";
        }
        example: '{"number": "538","email": "test@mail.org","password": "123456"}'
    };

    int32 number = 1;
    string email = 2 [
        (buf.validate.field).string.email = true
    ];
}

